fixed for viewing on mobile devices

--- a/src/root.css
+++ b/src/root.css
@@ -10,6 +10,12 @@ html {
     height: 100%;
 }
 
+@media (max-width: 800px) {
+  canvas {
+    width: 350px;
+  }
+}
+
 body {
   /* font-family: Gordita, Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif; */
